Media query to fix UI on smaller screens

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -2,9 +2,11 @@ body {
     font-family: "Ubuntu", sans-serif;
 }
 
-header, main {
-    width: 100rem;
-    margin: 0 calc(50vw - 50rem);
+@media screen and (min-width: 100rem) {
+    header, main {
+        width: 100rem;
+        margin: 0 calc(50vw - 50rem);
+    }
 }
 
 form {
